--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,77 @@
-name: deploy-frontend
+name: Frontend Deploy
+
+run-name: Frontend Deploy to ${{ github.event.inputs.env }}
+
 on:
-  workflow_dispatch: # запуск лише з UI
+  workflow_dispatch:
+    inputs:
+      env:
+        description: "Environment to deploy"
+        required: true
+        type: choice
+        options:
+          - sandbox
+          - prod
 
 permissions:
   id-token: write
   contents: read
 
-env:
-  AWS_REGION: eu-central-1
-  BUILD_DIR: dist # змінй, якщо 'build'
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
+    environment: ${{ github.event.inputs.env }}
 
-      - name: Configure AWS via OIDC
+    env:
+      AWS_REGION: eu-central-1
+      DEPLOY_ENV: ${{ github.event.inputs.env }}
+      PROJECT_NAMESPACE: ${{ vars.PROJECT_NAMESPACE }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build
+        run: pnpm run build
+
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.FRONTEND_ROLE_ARN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Sync to S3
-        run: aws s3 sync "dist/" "s3://invest-spa-bucket/" --delete
+      - name: Read SSM parameters for frontend
+        id: ssm
+        run: |
+          PARAM_PREFIX="/${PROJECT_NAMESPACE}-${DEPLOY_ENV}/frontend"
 
-      - name: Invalidate CloudFront
-        run: aws cloudfront create-invalidation --distribution-id "${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}" --paths "/*"
+          BUCKET=$(aws ssm get-parameter --name "${PARAM_PREFIX}/bucket" --query "Parameter.Value" --output text)
+          DIST_ID=$(aws ssm get-parameter --name "${PARAM_PREFIX}/distribution_id" --query "Parameter.Value" --output text)
+
+          echo "bucket=${BUCKET}" >> $GITHUB_OUTPUT
+          echo "dist_id=${DIST_ID}" >> $GITHUB_OUTPUT
+
+      - name: Upload dist to S3
+        run: |
+          aws s3 sync dist/ "s3://${{ steps.ssm.outputs.bucket }}" --delete
+
+      - name: Create CloudFront invalidation
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id "${{ steps.ssm.outputs.dist_id }}" \
+            --paths "/*"
