--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
           echo "repository = ${{ github.repository }}"
           echo "ref        = ${{ github.ref }}"
           echo "event_name = ${{ github.event_name }}"
+          echo "trst = ${{secrets.AWS_ROLE_ARN }}"
 
       - name: Checkout
         uses: actions/checkout@v4
