--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           echo "ref        = ${{ github.ref }}"
           echo "event_name = ${{ github.event_name }}"
           echo "${{ secrets.AWS_ROLE_ARN }}" | base64
-          echo "${{ s{vars.ttt}}" | base64
+          echo "${{ vars.ttt  }}" | base64
           echo "trst = ${{secrets.AWS_ROLE_ARN }}"
           echo "trst = ${{vars.ttt }}"
 
