--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Generate .env.production
+      env:
+        DEPLOY_ENV: ${{ env.DEPLOY_ENV }}
+        TEST_VAR_1: ${{ secrets.TEST_VAR_1 }}
+        TEST_VAR_2: ${{ vars.TEST_VAR_2 }}
+      run: |
+        ./scripts/generate-env.sh .
+
       - name: Build
         run: pnpm run build
 
